2003-02-07    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/rosio.py (RO_StringIO.__iter__): removed xreadlines, since
	it produces a DeprecationWarning with Python 2.3a1.

2003-02-07 Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py: now XHTML-compliant
	by default.  

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.sqlStringAndValue): fix for NULL.

	* pylibs/setup-pylibs.in: distutils setup script used by the
	Makefile to build extension modules.

	* pylibs/Makefile.in: now uses distutils to build the extension modules;
	excludes some deprecated or unnecessary material from being built
	and installed.  Now works with Python 2.3a1!

	* Makefile.in: SW_VERSION is now defined here.


2003-02-06  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/mysqlconn.py (PyDOMySQL.__unpackConnectArgs): 
	allow verbosity to be specified in a connectstring.
	(PyDOMySQL.getAutoIncrement): fix for autoincrement.

2003-02-05  Jacob Smullyan <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: made it possible to pass
	a callable to RewriteCond for string keyword arguments (this was
	already permitted for integer kwargs), and added some
	documentation taken from the Open Source Digest article.


2003-02-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sample_webdocs/index.html: cleaned up slightly.

	* SkunkWeb/configure.in: dropping --with-services configure
	option, which is pointless.
	
	* SkunkWeb/swpython.py.in: now set version correctly.
	
	* starting to prepare release 3.4b1.  I'm going to prepare
	the release a little differently to produce a cleaner tarball.

2003-01-29  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: Pretty thorough overhaul:  
   	  - The hooks are now disabled by default, although they can be turned on 
	    by setting Configuration.rewriteEnableHooks to a true value.
	  - Yesterday's HostMatchBase stuff is gone; instead, added a